Доработан swagger
